Hama Change Log

Release 0.4 - Unreleased

  NEW FEATURES

   HAMA-428: Create a separate maven module and add basic structure for the Graph (edwardyoon)
   HAMA-398: Add CheckPointer and saving messages for future fault-tolerant systems (ChiaHung Lin via edwardyoon)

  BUG FIXES

    HAMA-436: Web Interface does not update Superstep Count (Thomas Jungblut)
    HAMA-429: Groom statuses should be reported periodically (ChiaHung Lin via edwardyoon)
    HAMA-421: Maven build issues using proxy (Joe Crobak via edwardyoon)

  IMPROVEMENTS
  
    HAMA-423: Improve and Refactor Partitioning in the Examples (Thomas Jungblut via edwardyoon)
    HAMA-422: Update HttpServer to use QueuedThreadPool (edwardyoon)
    HAMA-414: Move BSPPeer constructor into child process (edwardyoon)
    HAMA-419: Migrating site from forrest to maven (edwardyoon)
    
Release 0.3 - July 28, 2011

  NEW FEATURES

    HAMA-395: Add PageRank example (Thomas Jungblut via edwardyoon)
    HAMA-372: Add Web UI for Job monitoring (Thomas Jungblut via edwardyoon)
    HAMA-359: Add shortest path finding example (Thomas Jungblut via edwardyoon)
    HAMA-374: Add LocalBSPRunner (Thomas Jungblut via edwardyoon)
    HAMA-380: Add BSPMessageBundle to reduce RPC overhead (Miklos Erdelyi via edwardyoon)
    
  BUG FIXES
 
    HAMA-405: Fix NoClassDefFoundErrors (Joseph Boyd via edwardyoon)
    HAMA-404: LocalBSPRunner returns wrong superstep numbers (Thomas Jungblut via edwardyoon)
    HAMA-396: BSPPeer's ZK object should be constructed with listed quorum servers (edwardyoon)
    HAMA-391: Refactor Exception.printStackTrace() to LOG.error(Exception) (Thomas Jungblut via edwardyoon)
    HAMA-393: Add environment variable 'HAMA_HEAPSIZE' to hama-env.sh (edwardyoon)
    
  IMPROVEMENTS

    HAMA-394: Refactor 'hama' script and pom.xml (edwardyoon)
    HAMA-388: Add a profile 'forrest' to generate the website (edwardyoon)
    HAMA-392: Make zk session-timeout configurable (edwardyoon)